# python3-lgpd-crawler

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCKER_SETUP.md  Dockerfile  README.md  README.pt_BR.md  Relatorio_Auditoria_20260222_203514.xlsx  Relatorio_Auditoria_a993c0dc4141_202.xlsx  SECURITY.md  TOPOLOGY.md  audit_results.db  config.json  config.yaml  database_scanner.py  lgpdc.py  main.py  prep_audit.sh  pyproject.toml  report.json  requirements.txt  run.py  sonar-project.properties
.github/: dependabot.yml
api/: app.py  routes.py
config/: config.json  config.yaml  db_config.yaml  loader.py
connectors/: file_connector.py  sql_connector.py
core/: about.py  connector_registry.py  database.py  detector.py  engine.py  ml_engine.py  scanner.py
database/: connectors.py  scanner.py
db/: databasse.py
deploy/: DEPLOY.md  config.example.yaml  docker-compose.yml
docs/: ADDING_CONNECTORS.md  ADDING_CONNECTORS.pt_BR.md  COMMIT_AND_PR.md  DOCKER_SETUP.md  DOCKER_SETUP.pt_BR.md  NEXT_STEPS.md  PLANS_TODO.md  PLAN_LOGO_AND_NAMING.md  PLAN_MINOR_DATA_DETECTION.md  PLAN_RATE_LIMIT_SCANS.md  PLAN_WEB_HARDENING_SECURITY.md  TESTING.md  USAGE.md  USAGE.pt_BR.md  VERSIONING.md  VERSIONING.pt_BR.md  compliance-frameworks.md  lgpd_crawler.1  lgpd_crawler.5  minor-detection.md  minor-detection.pt_BR.md  sensitivity-detection.md  sensitivity-detection.pt_BR.md  sensitivity_terms_sensitive_categories.example.yaml
file_scan/: text_extractor.py
logging_custom/: logger.py
report/: generator.py  report_generator.py  sqlite_reporter.py
scanner/: data_scanner.py  (+1 more)
(+61 files in other folders)
