[project]
name = "python3-lgpd-crawler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.2",
    "flask-sqlalchemy>=3.1.1",
    "oracledb>=3.4.1",
    "psycopg2-binary>=2.9.11",
    "reportlab>=4.4.7",
    "setuptools>=80.9.0",
]
